<resources>
    <string name="app_name">ProTal</string>
    <string name="contentD_name">Name</string>
    <string name="contentD_logo">Logo</string>
    <string name="contentD_background">Background</string>

    <string name="et_hint_e_mail">E-mail</string>
    <string name="et_hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="empty_email_error">Enter E-mail</string>
    <string name="empty_password_error">Enter Password</string>
    <string name="forgot_pass_success">A password reset link has been sent to your email address</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="et_hint_name">Name</string>
    <string name="btn_register">Register</string>
    <string name="empty_name_error">Enter Name</string>
    <string name="empty_confirm_password_error">Please Re-enter your password</string>
    <string name="password_diff_error">Passwords do not match, retry!</string>
    <string name="confirm_email_message">A confirmation link has been sent to your email.</string>
    <string name="title_activity_main_home_page">MainHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_menu_team_boards">Team Boards</string>
    <string name="nav_menu_personal_boards">Personal Boards</string>
    <string name="et_add_board_dialog_name">Name</string>
    <string name="tv_add_board_dialog_title">Enter Boards Info</string>
    <string name="tv_add_board_dialog_board_type">Board Type</string>
    <string name="title_activity_boards">BoardsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_enter_card_info_title">Enter Card Info</string>
    <string name="tv_enter_list_info_title">Enter List Info</string>
</resources>
