<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<!--TODO: add ICONS-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_personal"
            android:title="@string/nav_menu_personal_boards" />
        <item
            android:id="@+id/nav_team"
            android:title="@string/nav_menu_team_boards" />
    </group>
    <group android:id="@+id/groupAccount" android:checkableBehavior="single">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout"
                android:onClick="signout" />
    </group>
</menu>
