<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_login_register_container"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">
        <EditText
            android:id="@+id/etEMailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_e_mail"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center"
            android:text="@string/forgot_password"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btnLoginSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btn_login"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/pbLoadingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvLoginError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Error"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>

    </LinearLayout>


</FrameLayout>